--- a/.github/workflows/build-cn.yml
+++ b/.github/workflows/build-cn.yml
@@ -2,43 +2,15 @@ name: "Build CN Version"
 
 on:
   workflow_dispatch:
-    inputs:
-      build_mac:
-        description: "Build macOS version"
-        required: true
-        type: boolean
-        default: true
-      build_windows:
-        description: "Build Windows version"
-        required: true
-        type: boolean
-        default: true
 
 env:
   APP_CARGO_TOML: apps/desktop/src-tauri/Cargo.toml
 
 jobs:
-  build:
+  build-macos-intel:
+    runs-on: macos-13
     permissions:
       contents: write
-    strategy:
-      fail-fast: false
-      matrix:
-        include:
-          - target: x86_64-apple-darwin
-            runner: macos-latest
-            name: macOS-Intel
-            enabled: ${{ inputs.build_mac }}
-          - target: aarch64-apple-darwin
-            runner: macos-latest
-            name: macOS-ARM
-            enabled: ${{ inputs.build_mac }}
-          - target: x86_64-pc-windows-msvc
-            runner: windows-latest
-            name: Windows
-            enabled: ${{ inputs.build_windows }}
-    runs-on: ${{ matrix.runner }}
-    if: ${{ matrix.enabled }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -63,17 +35,12 @@ jobs:
       - name: Rust setup
         uses: dtolnay/rust-toolchain@stable
         with:
-          targets: ${{ matrix.target }}
+          targets: x86_64-apple-darwin
 
       - name: Rust cache
         uses: swatinem/rust-cache@v2
         with:
           workspaces: "./apps/desktop/src-tauri -> target"
-
-      - name: Install dependencies (macOS)
-        if: runner.os == 'macOS'
-        run: |
-          brew install ffmpeg
 
       - name: Install dependencies
         run: pnpm install
@@ -83,42 +50,140 @@ jobs:
           echo "appVersion=${{ steps.read_version.outputs.value }}" >> .env
           echo "VITE_ENVIRONMENT=production" >> .env
 
-      - name: Build app (macOS)
-        if: runner.os == 'macOS'
+      - name: Build app
         working-directory: apps/desktop
         run: |
           pnpm -w cap-setup
-          pnpm tauri build --target ${{ matrix.target }}
+          pnpm tauri build --target x86_64-apple-darwin
         env:
           CI: false
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build app (Windows)
-        if: runner.os == 'Windows'
-        working-directory: apps/desktop
-        run: |
-          pnpm -w cap-setup
-          pnpm tauri build --target ${{ matrix.target }}
-        env:
-          CI: false
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Upload macOS artifacts
-        if: runner.os == 'macOS'
+      - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: Cap-CN-${{ matrix.name }}-${{ steps.read_version.outputs.value }}
+          name: Cap-CN-macOS-Intel-${{ steps.read_version.outputs.value }}
           path: |
-            target/${{ matrix.target }}/release/bundle/dmg/*.dmg
-            target/${{ matrix.target }}/release/bundle/macos/*.app
+            target/x86_64-apple-darwin/release/bundle/dmg/*.dmg
           if-no-files-found: warn
 
-      - name: Upload Windows artifacts
-        if: runner.os == 'Windows'
+  build-macos-arm:
+    runs-on: macos-latest
+    permissions:
+      contents: write
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Read version number
+        uses: SebRollen/toml-action@v1.0.2
+        id: read_version
+        with:
+          file: ${{ env.APP_CARGO_TOML }}
+          field: "package.version"
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 9
+
+      - name: Rust setup
+        uses: dtolnay/rust-toolchain@stable
+        with:
+          targets: aarch64-apple-darwin
+
+      - name: Rust cache
+        uses: swatinem/rust-cache@v2
+        with:
+          workspaces: "./apps/desktop/src-tauri -> target"
+
+      - name: Install dependencies
+        run: pnpm install
+
+      - name: Create .env file
+        run: |
+          echo "appVersion=${{ steps.read_version.outputs.value }}" >> .env
+          echo "VITE_ENVIRONMENT=production" >> .env
+
+      - name: Build app
+        working-directory: apps/desktop
+        run: |
+          pnpm -w cap-setup
+          pnpm tauri build --target aarch64-apple-darwin
+        env:
+          CI: false
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: Cap-CN-${{ matrix.name }}-${{ steps.read_version.outputs.value }}
+          name: Cap-CN-macOS-ARM-${{ steps.read_version.outputs.value }}
           path: |
-            target/${{ matrix.target }}/release/bundle/nsis/*.exe
-            target/${{ matrix.target }}/release/bundle/msi/*.msi
+            target/aarch64-apple-darwin/release/bundle/dmg/*.dmg
+          if-no-files-found: warn
+
+  build-windows:
+    runs-on: windows-latest
+    permissions:
+      contents: write
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Read version number
+        uses: SebRollen/toml-action@v1.0.2
+        id: read_version
+        with:
+          file: ${{ env.APP_CARGO_TOML }}
+          field: "package.version"
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 9
+
+      - name: Rust setup
+        uses: dtolnay/rust-toolchain@stable
+        with:
+          targets: x86_64-pc-windows-msvc
+
+      - name: Rust cache
+        uses: swatinem/rust-cache@v2
+        with:
+          workspaces: "./apps/desktop/src-tauri -> target"
+
+      - name: Install dependencies
+        run: pnpm install
+
+      - name: Create .env file
+        run: |
+          echo "appVersion=${{ steps.read_version.outputs.value }}" >> .env
+          echo "VITE_ENVIRONMENT=production" >> .env
+
+      - name: Build app
+        working-directory: apps/desktop
+        run: |
+          pnpm -w cap-setup
+          pnpm tauri build --target x86_64-pc-windows-msvc
+        env:
+          CI: false
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: Cap-CN-Windows-${{ steps.read_version.outputs.value }}
+          path: |
+            target/x86_64-pc-windows-msvc/release/bundle/nsis/*.exe
+            target/x86_64-pc-windows-msvc/release/bundle/msi/*.msi
           if-no-files-found: warn
